Filled out basic static tools

--- a/www/index.html
+++ b/www/index.html
@@ -8,13 +8,97 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
 </head>
 
 <body>
-  <p>Mancala.</p>
+  <div class="pure-g">
+    <div class="pure-u-2-3">
+      <!-- Game Board -->
+      <div class="pure-g">
+        <!-- Upper Row -->
+        <div class="pure-u-1-8">
+          <p class="box hide">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-00">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-01">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-02">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-03">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-04">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-05">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box hide">?</p>
+        </div>
+      </div>
+      <!-- Upper Row -->
 
-  <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+      <div class="pure-g">
+        <!-- Mid Row -->
+        <div class="pure-u-1-8">
+          <p class="box player_one" id="cell-13">?</p>
+        </div>
+        <div class="pure-u-3-4">
+          <p class="box hide">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-06">?</p>
+        </div>
+      </div>
+      <!-- Mid Row -->
+
+      <div class="pure-g">
+        <!-- Lower Row -->
+        <div class="pure-u-1-8">
+          <p class="box hide">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-12">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-11">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-10">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-09">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-08">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box player_two" id="cell-07">?</p>
+        </div>
+        <div class="pure-u-1-8">
+          <p class="box hide">?</p>
+        </div>
+      </div>
+      <!-- Lower Row -->
+
+    </div>
+    <!-- Game Board -->
+    <div class="pure-u-1-3">
+      <p class="">Controls</p>
+      <p id="server-message">Server Messages</p>
+    </div>
+  </div>
+
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.23.0/ramda.min.js"></script>
+  <script src="index.js"></script>
 
 </body>
 
