Updated to note the current turn

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
           <p class="box player_one" id="cell-13">?</p>
         </div>
         <div class="pure-u-3-4">
-          <p class="box hide">?</p>
+          <p class="box player_turn" id="player_turn">Player Turn</p>
         </div>
         <div class="pure-u-1-8">
           <p class="box player_two" id="cell-06">?</p>
