Updating front end to note player types

--- a/www/index.html
+++ b/www/index.html
@@ -91,8 +91,49 @@
     </div>
     <!-- Game Board -->
     <div class="pure-u-1-3">
-      <p class="">Controls</p>
-      <p id="server-message">Server Messages</p>
+      <div class="control-box">
+        <h3 class="">Controls</h3>
+        <p id="server-message"></p>
+
+        <h4 class="player_one_text">Player One</h4>
+        <div class="form-wrapper">
+          <form class="pure-form" id="player_one_choices">
+          </form>
+        </div>
+
+        <h4 class="player_two_text">Player Two</h4>
+        <div class="form-wrapper">
+          <form class="pure-form" id="player_two_choices">
+          </form>
+        </div>
+
+        <button class="pure-button" id="btn-restart-game">Restart Game</button>
+        <hr />
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>2</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+        <p>Data</p>
+      </div>
     </div>
   </div>
 
