Rough framework for front end to use agents

--- a/www/index.html
+++ b/www/index.html
@@ -109,36 +109,15 @@
 
         <button class="pure-button" id="btn-restart-game">Restart Game</button>
         <hr />
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>2</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
-        <p>Data</p>
+
       </div>
     </div>
   </div>
 
-  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/bluebird/3.4.7/bluebird.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ramda/0.23.0/ramda.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/velocity/1.4.3/velocity.min.js"></script>
   <script src="index.js"></script>
 
 </body>
