--- a/www/index.html
+++ b/www/index.html
@@ -95,13 +95,13 @@
         <h3 class="">Controls</h3>
         <p id="server-message"></p>
 
-        <h4 class="player_one_text">Player One</h4>
+        <h4 class="player_one_text">Player One - <span id="player_one_score">0</span> wins</h4>
         <div class="form-wrapper">
           <form class="pure-form" id="player_one_choices">
           </form>
         </div>
 
-        <h4 class="player_two_text">Player Two</h4>
+        <h4 class="player_two_text">Player Two - <span id="player_two_score">0</span> wins</h4>
         <div class="form-wrapper">
           <form class="pure-form" id="player_two_choices">
           </form>
