Added a speed slider

--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="main.css">
-  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD"
+    crossorigin="anonymous">
 </head>
 
 <body>
@@ -94,6 +95,17 @@
       <div class="control-box">
         <h3 class="">Controls</h3>
         <p id="server-message"></p>
+
+        <form class="pure-form">
+          <fieldset>
+            <legend>Controls</legend>
+            <label for="agent_speed">
+              Agent Speed
+              <input id="agent_speed" type="range" min="10" max="500" step="1" value="100"/>
+            </label>
+          </fieldset>
+        </form>
+
 
         <h4 class="player_one_text">Player One - <span id="player_one_score">0</span> wins</h4>
         <div class="form-wrapper">
