Auto restart option

--- a/www/index.html
+++ b/www/index.html
@@ -102,6 +102,12 @@
               Agent Speed
               <input id="agent_speed" type="range" min="5" max="500" step="1" value="100"/>
             </label>
+
+            <button class="pure-button pure-button-primary" id="btn-restart-game">Restart Game</button>
+
+            <label for="auto-restart">
+              <input id="auto-restart" type="checkbox"> Auto-Restart
+            </label>
           </fieldset>
         </form>
 
@@ -118,7 +124,7 @@
           </form>
         </div>
 
-        <button class="pure-button" id="btn-restart-game">Restart Game</button>
+
         <hr />
 
       </div>
